['project']

name = 'occlab' 
version = "0.0.2"
authors = [
  { name="Emma Holtzman", email="holtzmaner@gmail.com" },{name= "Dr. Rebecca Beadling", email= "rebecca.beadling@temple.edu"}
]
description = "Compilation of functions and packages created by the OCC Lab at Temple University under the supervision of Dr. Rebecca Beadling." 
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/emma138/occlab"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"